Refactor generale del progetto , inseriti nomi parlanti alle classi.
Inserito Liquibase all'interno del progetto, versionato database